import uuid

from django.db import models
from django.conf import settings
from Village.models import Village


STATUS_CHOICES = [
    ("PENDING", "Pending Approval"),
    ("APPROVED", "Approved"),
    ("REJECTED", "Rejected"),
    ("CANCELLED", "Cancelled"),
]

class Event(models.Model):

    event_id = models.UUIDField(primary_key=True, default=uuid.uuid4, editable=False)
    title = models.CharField(max_length=255)
    description = models.TextField()
    exact_place_of_village= models.CharField(max_length=255)
    date = models.DateField()
    start_time = models.TimeField()
    end_time = models.TimeField()
    
    organizer = models.ForeignKey(
        settings.AUTH_USER_MODEL,
        on_delete=models.CASCADE,
        related_name="organized_events"
    )

    status = models.CharField(max_length=20, choices=STATUS_CHOICES, default="PENDING")

    image = models.ImageField(upload_to="events/images/", null=True, blank=True)
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)
    village=models.ForeignKey(Village,on_delete=models.CASCADE)

    def __str__(self):
        return f"{self.title} ({self.date})"
